# wayfire

./: config.h.in  meson.build  meson_options.txt
.github/workflows/: ci.yaml
metadata/: output.xml  workarounds.xml
plugins/animate/: squeezimize.hpp  unmapped-view-node.hpp
plugins/common/: move-drag-interface.cpp  workspace-wall.cpp
plugins/cube/: cube.cpp
plugins/decor/: deco-subsurface.cpp
plugins/grid/: grid.cpp  meson.build
plugins/ipc/: ipc.hpp  meson.build  stipc.cpp
plugins/ipc-rules/: ipc-events.hpp  ipc-input-methods.hpp  ipc-rules-common.hpp  ipc-rules.cpp  ipc-utility-methods.hpp  meson.build
plugins/ipc/wayfire/plugins/ipc/: ipc-activator.hpp  ipc-helpers.hpp
plugins/protocols/: input-method-v1.cpp  meson.build  wayfire-shell.cpp
plugins/scale/: meson.build  scale-title-filter.cpp  scale-title-overlay.cpp  scale.cpp
plugins/single_plugins/: alpha.cpp  command.cpp  expo.cpp  extra-gestures.cpp  meson.build  move.cpp  resize.cpp  switcher.cpp  wsets.cpp
plugins/tile/: tile-ipc.hpp  tile-plugin.cpp
plugins/vswitch/: vswitch.cpp
plugins/wm-actions/: meson.build  wm-actions.cpp
plugins/wobbly/: wobbly.cpp
shaders/: color-transform.frag  core-basic.vert  meson.build  texture-transform.vert  wobbly.frag  wobbly.vert
src/: geometry.cpp  meson.build  render.cpp
src/api/wayfire/: core.hpp  geometry.hpp  opengl.hpp  output-layout.hpp  output.hpp  plugin.hpp  render.hpp  signal-definitions.hpp  toplevel-view.hpp  view-transform.hpp  view.hpp  vulkan.hpp
src/core/: core-impl.hpp  core.cpp  opengl.cpp  output-layout.cpp  vulkan.cpp  xdg-output-management.cpp  xdg-output-management.hpp
src/core/seat/: cursor.cpp  hotspot-manager.cpp  input-method-popup.cpp  input-method-relay.cpp  (+5 more)
src/output/: output.cpp  render-manager.cpp  workspace-stream.cpp
src/view/: toplevel-node.cpp  toplevel-node.hpp  view-3d.cpp  view-impl.hpp  wlr-surface-node.cpp  wlr-surface-touch-interaction.cpp  xwayland.cpp
(+18 files in other folders)
